--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,161 @@
+@import url("https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,200;0,500;0,700;0,900;1,900&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Grandstander", cursive;
+  font-size: 1.2rem;
+}
+* {
+  margin: 0;
+  padding: 0;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  font-weight: 900;
+  font-size: inherit;
+  cursor: pointer;
 }
 
 * {
   box-sizing: border-box;
+}
+nav {
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  align-items: center;
+  margin: 1rem;
+  background-color: blueviolet;
+  padding: 1rem;
+  border-radius: 1rem;
+  color: white;
+}
+nav section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.about {
+  margin: 1rem;
+}
+.about h3 {
+  text-align: center;
+}
+.home {
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.home ul {
+  margin: 0 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: fit-content;
+  box-shadow: 1px 1px 2px 1px white;
+  padding: 1rem;
+  cursor: pointer;
+
+  border-radius: 1rem;
+}
+.card p {
+  text-align: center;
+}
+.btn {
+  font-family: inherit;
+  padding: 0.5rem 1rem;
+  font-size: 1.4rem;
+  font-weight: bold;
+  border: 0;
+  border-radius: 1rem;
+  color: white;
+}
+.wall {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 2rem;
+  overflow-x: auto;
+  width: 95%;
+  height: 81vh;
+  margin: 0.5rem auto;
+  border-radius: 1rem;
+}
+
+.wall::-webkit-scrollbar {
+  background-color: transparent;
+  border-radius: 1rem;
+}
+.wall::-webkit-scrollbar-thumb {
+  background-color: rgba(f, f, f, 0.3);
+  border: 0.3rem solid white;
+  border-radius: 1rem;
+}
+.switch {
+  width: 80px;
+  height: 50px;
+  background-color: rgba(255, 255, 255, 0.4);
+  display: flex;
+  justify-content: flex-end;
+  border-radius: 50px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.switch[data-ison="true"] {
+  justify-content: flex-start;
+}
+
+.handle {
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border-radius: 40px;
+}
+
+.page {
+  position: relative;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  margin: 2rem;
+  padding: 1rem;
+}
+@media (max-width: 500px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+  }
+  nav section {
+    display: flex;
+    flex-direction: column;
+  }
+}
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem;
+  opacity: 0.3;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.4rem;
+}
+footer:hover {
+  opacity: 1;
 }
